--- a/test.html
+++ b/test.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./test.css">
+    <script src="./test.js"></script>
 </head>
 <body>
     <div>这是测试代码</div>
+    <div id="test">呵呵哈哈</div>
 </body>
 </html>
