--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <script src="./test.js"></script>
 </head>
 <body>
-    <div>这是测试代码</div>
+    <div>这是dev的测试代码</div>
     <div id="test">呵呵哈哈</div>
 </body>
 </html>
